--- a/index.css
+++ b/index.css
@@ -2,133 +2,133 @@
 * {
     margin: 0;
     padding: 0;
-    background-color:rgba(209, 150, 150, 0.89);
+    font-family: 'Roboto', sans-serif;
+}
 
+body {
+    background-color: #9e7070;
 }
 
 .container {
     display: flex;
-    flex: 1;
-    background-color: rgba(200, 141, 141, 0.56);
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
     flex-direction: column;
-    
 }
 
 .header {
     display: flex;
-    flex: 1;
     flex-direction: row;
-    background-color: rgb(77, 58, 58);
-    margin-left: 1rem;
-    margin-right: 1rem;
-    margin-top: 1rem;
+    margin: 1rem;
     border-radius: 0.7rem;
+    background-color: #4d3a3a;
     height: 3rem;
+    padding: 1rem;
 }
 
-.header .button1 {
+.header .btn {
     display: flex;
-    flex: 1;
     flex-direction: row;
+    align-items: center;
     justify-content: center;
-    background-color: rgb(149, 100, 82);
     padding: 1px;
+    margin-right: 1rem;
+    min-width: 150px;
     cursor: pointer;
     text-align: center;
     border-radius: 0.5rem;
     text-align: center;
-    margin-top: 0.7rem;
-    margin-bottom: 1rem;
-    margin-left: 1rem;
-    margin-right: 0.5rem;
-    padding-bottom: 10px;
-
+    font-size: 1.3rem;
+    font-weight: 600;
+    background-color: #fbf8f6;
 }
 
-.header .button2 {
-    display: flex;
-    flex: 1;
-    flex-direction: row;
-    justify-content: center;
-    background-color: rgb(251, 248, 246);
-    padding: 1px;
-    cursor: pointer;
-    text-align: center;
-    border-radius: 0.5rem;
-    text-align: center;
-    margin-top: 0.7rem;
-    margin-bottom: 1rem;
-    margin-left: 0.5rem;
-    margin-right: 20rem;
-    padding-bottom: 10px;
-    
+.header .btn:last-child {
+    margin-right: 0;
+}
+
+.header .btn.selected {
+    background-color: #956452;
+    color: #fbf8f6;
 }
  
 .main {
     display: flex;
     flex: 1;
-    background-color:rgba(172, 127, 127, 0.745);
+    align-items: center;
+    justify-content: center;
 }
 
-.main .ax1 {
+.main .items {
+    width: 50%;
+    height: 50%;
+    margin-left: 15%;
+    position: relative;
+}
+
+.main .embeded-img {
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     position: absolute;
-    top: 24rem;
-    left: 9rem;
     border-radius: 50%;
     overflow: hidden;
     flex-direction: row;
     padding: 0;
     border-width: 20px;
-    
 }
 
-.main .ax2 {
-    position: absolute;
-    top: 10rem;
-    left: 5rem;
-    border-radius: 50%;
-    overflow: hidden;
-    flex-direction: row;
-    padding: 0;
-    border: 1rem;
-    border-width: 20px;
-
+.main .embeded-img:hover,
+.main .embeded-img:active {
+    -webkit-transform: scale(1.5rem);
 }
 
+.main .embeded-img.circle-1 {
+    top: 0;
+    left: 0;
+    width: 300px;
+    height: 300px;
+    background-image: url('./assets/img/m1.jpeg');
+}
 
-.main .ax3 {
-    position: absolute;
-    top: 7rem;
-    left: 15rem;
-    border-radius: 50%;
-    overflow: hidden;
-    flex-direction: row;
-    padding: 0;
-    border: 1rem;
-
+.main .embeded-img.circle-2 {
+    top: 240px;
+    left: -180px;
+    width: 450px;
+    height: 450px;
+    border: 1rem solid #9e7070;
+    background-image: url('./assets/img/m2.webp');
 }
 
 
-.main .ax4 {
-    position: absolute;
-    top: 25rem;
-    left: 22rem;
-    border-radius: 50%;
-    overflow: hidden;
-    flex-direction: row;
-    padding: 0;
-    border: 1rem;
-
+.main .embeded-img.circle-3 {
+    top: -110px;
+    left: 250px;
+    width: 350px;
+    height: 350px;
+    border: 1rem solid #9e7070;
+    background-image: url('./assets/img/m3.jpeg');
 }
 
 
-.main .ax5 {
-    position: absolute;
-    top: 11rem;
-    left: 28rem;
-    border-radius: 50%;
-    overflow: hidden;
-    flex-direction: row;
-    padding: 0;
-    border: 1rem;
+.main .embeded-img.circle-4 {
+    bottom: -200px;
+    left: 200px;
+    width: 400px;
+    height: 400px;
+    border: 1rem solid #9e7070;
+    background-image: url('./assets/img/m4.jpeg');
+}
+
+
+.main .embeded-img.circle-5 {
+    top: 50px;
+    left: 460px;
+    width: 600px;
+    height: 600px;
+    border: 1rem solid #9e7070;
+    background-image: url('./assets/img/m5.webp');
 }
