--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ body {
     justify-content: center;
     padding: 1px;
     margin-right: 1rem;
+    text-decoration: none;
     min-width: 150px;
     cursor: pointer;
     text-align: center;
@@ -43,6 +44,7 @@ body {
     text-align: center;
     font-size: 1.3rem;
     font-weight: 600;
+    color: #000;
     background-color: #fbf8f6;
 }
 
@@ -79,11 +81,15 @@ body {
     flex-direction: row;
     padding: 0;
     border-width: 20px;
+    cursor: pointer;
+    -webkit-transition: transform 0.3s ease-in-out;
+    -moz-transition: transform 0.3s ease-in-out;
+    transition: transform 0.3s ease-in-out;
 }
 
 .main .embeded-img:hover,
 .main .embeded-img:active {
-    -webkit-transform: scale(1.5rem);
+    transform: scale(1.2, 1.2);
 }
 
 .main .embeded-img.circle-1 {
